Fixed overlap issue

--- a/css/theme.css
+++ b/css/theme.css
@@ -481,7 +481,6 @@ body {
     padding-top: 75px;
     padding-top: 5.86vw;
     margin-top: -1px;
-    margin-bottom: -1px;
 }
 
 #glowVidBtn {
